<resources>
    <string name="app_name">amazon-adle</string>
    <string name="search_products_by_camera">Search products by camera</string>
    <string name="back_button">Back button</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="score">Score</string>
    <string name="us">US$</string>
    <string name="price">Price</string>
    <string name="decimalprice">DecimalPrice</string>
    <string name="resultados">RESULTADOS</string>
    <string name="oferta_del_d_a">Oferta del día</string>
    <string name="menos_de_500">Menos de $500</string>
    <string name="o_m_s">o más</string>
    <string name="electr_nica">Electrónica</string>
    <string name="cuatro_estrellas_filtro">cuatro estrellas filtro</string>
    <string name="filtros">Filtros ᐯ</string>
</resources>